Omnifood Optimizations: Browser support and fixing flexbox gap in Safari completed successfully.

--- a/09_Omnifood_Optimization/css/queries.css
+++ b/09_Omnifood_Optimization/css/queries.css
@@ -142,13 +142,14 @@
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.9);
     position:absolute;
     top: 0;
     left: 0;
     width:100%;
     height:100vh;
-    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
     transform: translateX(100%);
     display: flex;
     align-items: center;
@@ -306,5 +307,58 @@
   .cta-text-box {
     padding: 3.2rem;
   }
+}
 
+
+/* *********************************** */
+    /* FIXING SAFARI FLEXBOX GAP */
+/* *********************************** */
+
+.no-flex-gao .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flex-gao .list-item:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flex-gao .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flex-gao .delivered-faces:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flex-gao .meal-attribute:not(:last-child) {
+  margin-right: 2rem;
+}
+
+.no-flex-gao .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flex-gao .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flex-gao .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flex-gao .footer-nav li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+@media (max-width: 75rem) {
+  .no-flex-gao .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 75rem) {
+  .no-flex-gao .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
 }
